--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "node index.js"
 
   },
+  "engines": {
+  "node": "16.x" 
+}
+,
   "keywords": [],
   "author": "",
   "license": "ISC",
